--- a/src/Interface.ui
+++ b/src/Interface.ui
@@ -10,6 +10,12 @@
     <height>661</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
    <string>MasterCalculTA</string>
   </property>
@@ -28,13 +34,21 @@
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
-     <layout class="QVBoxLayout" name="leftSideBarLayout"/>
+     <layout class="QVBoxLayout" name="leftSideBarLayout">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetNoConstraint</enum>
+      </property>
+     </layout>
     </item>
     <item>
      <layout class="QVBoxLayout" name="canvasLayout"/>
     </item>
     <item>
-     <layout class="QVBoxLayout" name="rightSideBarLayout"/>
+     <layout class="QVBoxLayout" name="rightSideBarLayout">
+      <property name="sizeConstraint">
+       <enum>QLayout::SetMinimumSize</enum>
+      </property>
+     </layout>
     </item>
    </layout>
   </widget>
